fix a build problem on Blue Gene

--- a/test/src/Makefile.in
+++ b/test/src/Makefile.in
@@ -229,7 +229,6 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 RANLIB = @RANLIB@
 RM_TYPE = @RM_TYPE@
-SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 SMPFACTOR = @SMPFACTOR@
@@ -298,13 +297,13 @@ LE_model_checker_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
 LE_model_checker_LDADD = @LIBPTHREAD@
 LE_model_checker_LDFLAGS = @LNCHR_BIT_FLAGS@ @LIBPTHREAD@ $(AM_LDFLAGS)
 fe_launch_smoketest_SOURCES = fe_launch_smoketest.cxx util.c
-fe_launch_smoketest_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
-fe_launch_smoketest_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
+fe_launch_smoketest_CFLAGS = @BUILD_FLAGS@ $(AM_CFLAGS)
+fe_launch_smoketest_CXXFLAGS = @BUILD_FLAGS@ $(AM_CXXFLAGS)
 fe_launch_smoketest_LDFLAGS = -L$(top_srcdir)/@LMONAPILOC@ 
 fe_launch_smoketest_LDADD = -lmonfeapi 
 fe_launch_usrpayload_test_SOURCES = fe_launch_usrpayload_test.cxx util.c
-fe_launch_usrpayload_test_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
-fe_launch_usrpayload_test_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
+fe_launch_usrpayload_test_CFLAGS = @BUILD_FLAGS@ $(AM_CFLAGS)
+fe_launch_usrpayload_test_CXXFLAGS = @BUILD_FLAGS@ $(AM_CXXFLAGS)
 fe_launch_usrpayload_test_LDFLAGS = -L$(top_srcdir)/@LMONAPILOC@ 
 fe_launch_usrpayload_test_LDADD = -lmonfeapi 
 
@@ -312,33 +311,33 @@ fe_launch_usrpayload_test_LDADD = -lmonfeapi
 #fe_multisession_launch_LDFLAGS    = -L$(top_srcdir)/@LMONAPILOC@ 
 #fe_multisession_launch_LDADD      = -lmonfeapi 
 fe_attach_smoketest_SOURCES = fe_attach_smoketest.cxx util.c
-fe_attach_smoketest_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
-fe_attach_smoketest_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
+fe_attach_smoketest_CFLAGS = @BUILD_FLAGS@ $(AM_CFLAGS)
+fe_attach_smoketest_CXXFLAGS = @BUILD_FLAGS@ $(AM_CXXFLAGS)
 fe_attach_smoketest_LDFLAGS = -L$(top_srcdir)/@LMONAPILOC@
 fe_attach_smoketest_LDADD = -lmonfeapi
 be_kicker_SOURCES = be_kicker.cxx util.c
-be_kicker_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
-be_kicker_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
+be_kicker_CFLAGS = @BUILD_FLAGS@ $(AM_CFLAGS)
+be_kicker_CXXFLAGS = @BUILD_FLAGS@ $(AM_CXXFLAGS)
 be_kicker_LDFLAGS = -L$(top_srcdir)/@LMONAPILOC@ 
 be_kicker_LDADD = -lmonbeapi 
 be_kicker_usrpayload_test_SOURCES = be_kicker_usrpayload_test.cxx
-be_kicker_usrpayload_test_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
-be_kicker_usrpayload_test_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
+be_kicker_usrpayload_test_CFLAGS = @BUILD_FLAGS@ $(AM_CFLAGS)
+be_kicker_usrpayload_test_CXXFLAGS = @BUILD_FLAGS@ $(AM_CXXFLAGS)
 be_kicker_usrpayload_test_LDFLAGS = -L$(top_srcdir)/@LMONAPILOC@ 
 be_kicker_usrpayload_test_LDADD = -lmonbeapi
 be_standalone_kicker_SOURCES = be_standalone_kicker.cxx
-be_standalone_kicker_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
-be_standalone_kicker_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
+be_standalone_kicker_CFLAGS = @BUILD_FLAGS@ $(AM_CFLAGS)
+be_standalone_kicker_CXXFLAGS = @BUILD_FLAGS@ $(AM_CXXFLAGS)
 be_standalone_kicker_LDFLAGS = -L$(top_srcdir)/@LMONAPILOC@ 
 be_standalone_kicker_LDADD = -lmonbeapi
 fe_jobsnap_SOURCES = fe_jobsnap.cxx util.c
-fe_jobsnap_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
-fe_jobsnap_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
+fe_jobsnap_CFLAGS = @BUILD_FLAGS@ $(AM_CFLAGS)
+fe_jobsnap_CXXFLAGS = @BUILD_FLAGS@ $(AM_CXXFLAGS)
 fe_jobsnap_LDFLAGS = -L$(top_srcdir)/@LMONAPILOC@
 fe_jobsnap_LDADD = -lmonfeapi 
 be_jobsnap_SOURCES = be_jobsnap.cxx util.c
-be_jobsnap_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
-be_jobsnap_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
+be_jobsnap_CFLAGS = @BUILD_FLAGS@ $(AM_CFLAGS)
+be_jobsnap_CXXFLAGS = @BUILD_FLAGS@ $(AM_CXXFLAGS)
 be_jobsnap_LDFLAGS = -L$(top_srcdir)/@LMONAPILOC@
 be_jobsnap_LDADD = -lmonbeapi
 bin_SCRIPTS = test.LE_model_checker_mainthread \
