--- a/test/src/test.jobsnap_1.in
+++ b/test/src/test.jobsnap_1.in
@@ -40,8 +40,6 @@ NOHUP=""
 if test "x$RM_TYPE" = "xbgrm" ; then
   NOHUP=nohup
   rm -f nohup.out
-  echo "[LMON FE] Test Not Implemented Yet"
-  exit 1
 fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
@@ -54,7 +52,7 @@ export JOBSNAP_TEST=1
 if test "x$RM_TYPE" = "xslurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xbgrm" ; then 
-  $MPI_JOB_LAUNCHER_PATH -verbose 0 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
+  $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 else
   echo "This RM is not supported yet" 
 fi
@@ -63,7 +61,7 @@ PID=`echo $!`
  
 sleep $WAITAMOUNT #wait until the job gets stalled 
  
-fe_jobsnap@EXE@ $PID `pwd`/be_kicker@EXE@ $SIGNUM 
+fe_jobsnap@EXE@ $PID `pwd`/be_jobsnap@EXE@ $SIGNUM 
  
 sleep $WAITAMOUNT
 
