--- a/configure.ac
+++ b/configure.ac
@@ -51,7 +51,7 @@ AC_CANONICAL_HOST
 
 dnl -----------------------------------------------
 dnl per Todd Gamblin's suggestion... the following
-dnl allows you to export config.h withoug conflicting
+dnl allows you to export config.h without conflicting
 dnl other dependent packages 
 dnl -----------------------------------------------
 X_AC_PREFIX_CONFIG_H([lmon-config.h])
@@ -176,11 +176,11 @@ X_AC_MPICC
 dnl -----------------------------------------------
 dnl Checks for header files.
 dnl -----------------------------------------------
-AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS([sys/time.h stdio.h syscall.h unistd.h libelf.h libelf/libelf.h poll.h signal.h errno.h sys/user.h libgen.h assert.h link.h thread_db.h netdb.h arpa/inet.h sys/socket.h netinet/in.h limits.h sys/ptrace.h execinfo.h fcntl.h sys/procfs.h pthread.h sys/resource.h stdarg.h dlfcn.h])
 AC_LANG_PUSH([C++])
 AC_CHECK_HEADERS([stack vector map list iostream string algorithm fstream sstream])
 AC_LANG_POP([C++])
+AC_HEADER_SYS_WAIT
+AC_CHECK_HEADERS([sys/time.h stdio.h syscall.h unistd.h libelf.h libelf/libelf.h poll.h signal.h errno.h sys/user.h libgen.h assert.h link.h thread_db.h netdb.h arpa/inet.h sys/socket.h netinet/in.h limits.h sys/ptrace.h execinfo.h fcntl.h sys/procfs.h pthread.h sys/resource.h stdarg.h dlfcn.h])
 
 if test "$ac_cv_header_libelf_h" = "yes" ; then
      AC_DEFINE(LOCATION_OF_LIBELFHEADER, [<libelf.h>],
