--- a/tools/pmgr_collective/src/Makefile.in
+++ b/tools/pmgr_collective/src/Makefile.in
@@ -67,8 +67,10 @@ am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(includedir)"
 libLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libpmgr_collective_la_LIBADD =
-am_libpmgr_collective_la_OBJECTS = pmgr_collective_common.lo \
-	pmgr_collective_client.lo pmgr_collective_mpirun.lo
+am_libpmgr_collective_la_OBJECTS =  \
+	libpmgr_collective_la-pmgr_collective_common.lo \
+	libpmgr_collective_la-pmgr_collective_client.lo \
+	libpmgr_collective_la-pmgr_collective_mpirun.lo
 libpmgr_collective_la_OBJECTS = $(am_libpmgr_collective_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/config/depcomp
@@ -163,6 +165,7 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 RANLIB = @RANLIB@
 RM_TYPE = @RM_TYPE@
+SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 SMPFACTOR = @SMPFACTOR@
@@ -235,6 +238,7 @@ include_HEADERS = pmgr_collective_client.h \
 			        pmgr_collective_common.h \
 			        pmgr_collective_mpirun.h
 
+libpmgr_collective_la_CFLAGS = @BUILD_FLAGS@
 libpmgr_collective_la_LDFLAGS = -version-info @LMON_CURRENT@:@LMON_REVISION@:@LMON_AGE@
 all: all-am
 
@@ -305,9 +309,9 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pmgr_collective_client.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pmgr_collective_common.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pmgr_collective_mpirun.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libpmgr_collective_la-pmgr_collective_client.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libpmgr_collective_la-pmgr_collective_common.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libpmgr_collective_la-pmgr_collective_mpirun.Plo@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	if $(COMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
@@ -329,6 +333,27 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LTCOMPILE) -c -o $@ $<
+
+libpmgr_collective_la-pmgr_collective_common.lo: pmgr_collective_common.c
+@am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libpmgr_collective_la_CFLAGS) $(CFLAGS) -MT libpmgr_collective_la-pmgr_collective_common.lo -MD -MP -MF "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_common.Tpo" -c -o libpmgr_collective_la-pmgr_collective_common.lo `test -f 'pmgr_collective_common.c' || echo '$(srcdir)/'`pmgr_collective_common.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_common.Tpo" "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_common.Plo"; else rm -f "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_common.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='pmgr_collective_common.c' object='libpmgr_collective_la-pmgr_collective_common.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libpmgr_collective_la_CFLAGS) $(CFLAGS) -c -o libpmgr_collective_la-pmgr_collective_common.lo `test -f 'pmgr_collective_common.c' || echo '$(srcdir)/'`pmgr_collective_common.c
+
+libpmgr_collective_la-pmgr_collective_client.lo: pmgr_collective_client.c
+@am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libpmgr_collective_la_CFLAGS) $(CFLAGS) -MT libpmgr_collective_la-pmgr_collective_client.lo -MD -MP -MF "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_client.Tpo" -c -o libpmgr_collective_la-pmgr_collective_client.lo `test -f 'pmgr_collective_client.c' || echo '$(srcdir)/'`pmgr_collective_client.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_client.Tpo" "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_client.Plo"; else rm -f "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_client.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='pmgr_collective_client.c' object='libpmgr_collective_la-pmgr_collective_client.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libpmgr_collective_la_CFLAGS) $(CFLAGS) -c -o libpmgr_collective_la-pmgr_collective_client.lo `test -f 'pmgr_collective_client.c' || echo '$(srcdir)/'`pmgr_collective_client.c
+
+libpmgr_collective_la-pmgr_collective_mpirun.lo: pmgr_collective_mpirun.c
+@am__fastdepCC_TRUE@	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libpmgr_collective_la_CFLAGS) $(CFLAGS) -MT libpmgr_collective_la-pmgr_collective_mpirun.lo -MD -MP -MF "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_mpirun.Tpo" -c -o libpmgr_collective_la-pmgr_collective_mpirun.lo `test -f 'pmgr_collective_mpirun.c' || echo '$(srcdir)/'`pmgr_collective_mpirun.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_mpirun.Tpo" "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_mpirun.Plo"; else rm -f "$(DEPDIR)/libpmgr_collective_la-pmgr_collective_mpirun.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='pmgr_collective_mpirun.c' object='libpmgr_collective_la-pmgr_collective_mpirun.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libpmgr_collective_la_CFLAGS) $(CFLAGS) -c -o libpmgr_collective_la-pmgr_collective_mpirun.lo `test -f 'pmgr_collective_mpirun.c' || echo '$(srcdir)/'`pmgr_collective_mpirun.c
 
 mostlyclean-libtool:
 	-rm -f *.lo
