--- a/test/src/test.attach_1_remote.in
+++ b/test/src/test.attach_1_remote.in
@@ -31,6 +31,7 @@
 #  of its associated job.
 #
 #  Update Log:
+#        Dec 17 2009 DHA: Added minimum waittime
 #        Mar 06 2009 DHA: Changed bglrm to bgrm
 #        Dec 14 2008 DHA: configurable NUMNODES
 #        Jun 16 2008 DHA: Created file.
@@ -45,6 +46,9 @@ fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 WAITAMOUNT=$NUMNODES
+if test $NUMNODES -lt 10 ; then
+  WAITAMOUNT=10
+fi
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
 RM_TYPE=@RMTP@
