--- a/config.h.in
+++ b/config.h.in
@@ -10,17 +10,20 @@
 /* Define 1 for BIT64 */
 #undef BIT64
 
-/* Define command line support */
-#undef COMMLINE_SUPPORT
+/* Define 1 for COBO_BASED */
+#undef COBO_BASED
+
+/* Define 20101 for COBO_BASED; port range will be 20101 - 20172 */
+#undef COBO_BEGIN_PORT
+
+/* Define 72 for COBO_BASED */
+#undef COBO_PORT_RANGE
 
 /* Define DEBUG flag */
 #undef DEBUG
 
 /* env command found */
 #undef ENVCMD
-
-/* Define fine grain mpirun interface support */
-#undef FINEGRAIN_MPIRUN_INTERFACE
 
 /* Define to 1 if you have the <algorithm> header file. */
 #undef HAVE_ALGORITHM
@@ -30,6 +33,9 @@
 
 /* Define to 1 if you have the <assert.h> header file. */
 #undef HAVE_ASSERT_H
+
+/* Define to 1 if you have the <cxxabi.h> header file. */
+#undef HAVE_CXXABI_H
 
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
@@ -123,6 +129,9 @@
 /* Define to 1 if stdbool.h conforms to C99. */
 #undef HAVE_STDBOOL_H
 
+/* Define to 1 if you have the <stddef.h> header file. */
+#undef HAVE_STDDEF_H
+
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
@@ -203,9 +212,6 @@
 
 /* Define to 1 if the system has the type `_Bool'. */
 #undef HAVE__BOOL
-
-/* Define lazy binding support */
-#undef LAZY_BINDING
 
 /* Define 1 for LINUX_CODE_REQUIRED */
 #undef LINUX_CODE_REQUIRED
