--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -108,7 +108,6 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBBITSUFFIX = @LIBBITSUFFIX@
-LIBCIOD = @LIBCIOD@
 LIBCOMM = @LIBCOMM@
 LIBDL = @LIBDL@
 LIBELF = @LIBELF@
@@ -153,8 +152,6 @@ WITH_CIOD_FALSE = @WITH_CIOD_FALSE@
 WITH_CIOD_TRUE = @WITH_CIOD_TRUE@
 WITH_COBO_FALSE = @WITH_COBO_FALSE@
 WITH_COBO_TRUE = @WITH_COBO_TRUE@
-WITH_GCRYPT_FALSE = @WITH_GCRYPT_FALSE@
-WITH_GCRYPT_TRUE = @WITH_GCRYPT_TRUE@
 WITH_PMGR_COLLECTIVE_FALSE = @WITH_PMGR_COLLECTIVE_FALSE@
 WITH_PMGR_COLLECTIVE_TRUE = @WITH_PMGR_COLLECTIVE_TRUE@
 ac_ct_AR = @ac_ct_AR@
@@ -205,9 +202,9 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 tvcmd = @tvcmd@
 @WITH_PMGR_COLLECTIVE_TRUE@OPT_PMGR_COLLECTIVE = pmgr_collective
-@WITH_CIOD_TRUE@OPT_CIOD = ciod
-@WITH_GCRYPT_TRUE@OPT_GCRYPT = libgpg-error
 @WITH_COBO_TRUE@OPT_COBO = cobo
+@WITH_CIOD_TRUE@OPT_CIOD = ciod
+OPT_GCRYPT = libgpg-error
 SUBDIRS = $(OPT_PMGR_COLLECTIVE) $(OPT_COBO) $(OPT_CIOD) $(OPT_GCRYPT)
 LIBGCRYPTDISTFILES = libgcrypt/src libgcrypt/src/gcrypt.h \
 	libgcrypt/src/gcrypt-module.h libgcrypt/src/Makefile.in \
