--- a/test/src/Makefile.in
+++ b/test/src/Makefile.in
@@ -37,8 +37,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@WITH_GCRYPT_TRUE@am__append_1 = -I$(top_srcdir)/@GCRYPTLOC@ -I$(top_srcdir)/@GPGERRLOC@
-@WITH_CIOD_TRUE@am__append_2 = -I@ARCHHEADER@ -I$(top_srcdir)/@CIODLOC@
+@WITH_CIOD_TRUE@am__append_1 = -I@ARCHHEADER@ -I$(top_srcdir)/@CIODLOC@
 bin_PROGRAMS = fe_jobsnap$(EXEEXT) be_jobsnap$(EXEEXT) \
 	LE_model_checker$(EXEEXT) fe_launch_smoketest$(EXEEXT) \
 	fe_launch_usrpayload_test$(EXEEXT) \
@@ -196,7 +195,6 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBBITSUFFIX = @LIBBITSUFFIX@
-LIBCIOD = @LIBCIOD@
 LIBCOMM = @LIBCOMM@
 LIBDL = @LIBDL@
 LIBELF = @LIBELF@
@@ -229,6 +227,7 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 RANLIB = @RANLIB@
 RM_TYPE = @RM_TYPE@
+SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 SMPFACTOR = @SMPFACTOR@
@@ -238,8 +237,8 @@ TESTNNODES = @TESTNNODES@
 VERSION = @VERSION@
 WITH_CIOD_FALSE = @WITH_CIOD_FALSE@
 WITH_CIOD_TRUE = @WITH_CIOD_TRUE@
-WITH_GCRYPT_FALSE = @WITH_GCRYPT_FALSE@
-WITH_GCRYPT_TRUE = @WITH_GCRYPT_TRUE@
+WITH_COBO_FALSE = @WITH_COBO_FALSE@
+WITH_COBO_TRUE = @WITH_COBO_TRUE@
 WITH_PMGR_COLLECTIVE_FALSE = @WITH_PMGR_COLLECTIVE_FALSE@
 WITH_PMGR_COLLECTIVE_TRUE = @WITH_PMGR_COLLECTIVE_TRUE@
 ac_ct_AR = @ac_ct_AR@
@@ -290,7 +289,8 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 tvcmd = @tvcmd@
 INCLUDES = -I$(top_srcdir)/launchmon/src -I$(top_srcdir)/@LMONAPILOC@ \
-	$(am__append_1) $(am__append_2)
+	-I$(top_srcdir)/@GCRYPTLOC@ -I$(top_srcdir)/@GPGERRLOC@ \
+	$(am__append_1)
 LE_model_checker_SOURCES = LE_model_checker.c
 LE_model_checker_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
 LE_model_checker_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
