Deprecated lmon-config.h

--- a/launchmon/src/linux/Makefile.in
+++ b/launchmon/src/linux/Makefile.in
@@ -279,8 +279,8 @@ launchmon_SOURCES = main.cxx \
 			  sdbg_linux_thr_db.hxx
 
 launchmon_LDADD = @LIBELF@ @LIBDL@
-launchmon_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ #$(AM_CFLAGS) 
-launchmon_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ #$(AM_CXXFLAGS)
+launchmon_CFLAGS = @LNCHR_BIT_FLAGS@ #$(AM_CFLAGS) 
+launchmon_CXXFLAGS = @LNCHR_BIT_FLAGS@ #$(AM_CXXFLAGS)
 launchmon_LDFLAGS = -rdynamic @LNCHR_BIT_FLAGS@ $(AM_LDFLAGS) 
 all: all-recursive
 
