--- a/test/src/Makefile.am
+++ b/test/src/Makefile.am
@@ -167,6 +167,8 @@ EXTRA_DIST                        = test.LE_model_checker_mainthread.in \
 
 
 do_subst = sed -e 's,@LMON@,$(prefix)/bin/launchmon$(EXEEXT),g' \
+	       -e 's,@LMONPREFIX@,$(prefix),g' \
+	       -e 's,@BESTARTER@,$(prefix)/bin/$(BE_STARTER)$(EXEEXT),g' \
                -e 's,@TJLPATH@,$(TARGET_JOB_LAUNCHER_PATH),g' \
                -e 's,@RMTP@,$(RM_TYPE),g' \
 	       -e 's,@SMP@,$(SMPFACTOR),g' \
